Use Double.valueOf instead of new Double. This resolves a WARNING under Java 11 that was causing the pipline to break. (#1107)